--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
     <!-- footer -->
     <footer>
         <div>
-            <p>&copy; asakarso. 2020. My fisrt Profile Web</p>
+            <p>&copy; asakarso. 2020. My Fisrt Profile Web</p>
         </div>
     </footer>
 
