--- a/index.html
+++ b/index.html
@@ -136,6 +136,16 @@
                         </div>
                         <p>A personal web I made to introduce my self. I made this project after learned about Figma.</p>
                     </div>
+                    
+                    <div class="projects">
+                        <h4>VIVIZ</h4>
+                        <div class="project">
+                            <a href="https://asakarso.github.io/viviz/" target="blank">
+                                <img src="img/project/viviz.png" alt="VIVIZ">
+                            </a>
+                        </div>
+                        <p>A personal web I made to introduce my self. I made this project after learned about Figma.A website that inform you about a south-korean girlgorup named VIVIZ. Ini adalah salah satu project saya yang saya gunakan sebagai syarat kelulusan ketika mengikuti kursus Dicoding "Belajar Dasar Pemrograman Web".</p>
+                    </div>
                 </div>
             </div>
         </div>
