--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
     <!-- footer -->
     <footer>
         <div>
-            <p>&copy; asakarso. 2020. My Fisrt Profile Web</p>
+            <p>&copy; asakarso. 2020. My First Profile Web</p>
         </div>
     </footer>
 
