--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                                 <img src="img/project/viviz.png" alt="VIVIZ">
                             </a>
                         </div>
-                        <p>A personal web I made to introduce my self. I made this project after learned about Figma.A website that inform you about a south-korean girlgorup named VIVIZ. Ini adalah salah satu project saya yang saya gunakan sebagai syarat kelulusan ketika mengikuti kursus Dicoding "Belajar Dasar Pemrograman Web".</p>
+                        <p>A website that inform you about a south-korean girlgorup named VIVIZ. This is one of my projects I made as requirement to finish my course in Dicoding.</p>
                     </div>
                 </div>
             </div>
