--- a/index.html
+++ b/index.html
@@ -64,33 +64,27 @@
                 <div class="camp">
                     <div class="kursus">
                         <div class="course">
-                            <img src="img/dicodimg.png" alt="Dicoding">
+                            <img src="img/course/dicoding.png" alt="Dicoding">
                         </div>
                         <p>Memulai Pemrograman dengan Python</p>
                     </div>    
                     <div class="kursus">
                         <div class="course">
-                            <img src="img/progate.png" alt="Progate">
+                            <img src="img/course/progate.png" alt="Progate">
                         </div>
                         <p>Intro to Coding: HTML & CSS</p>
                     </div>
                     <div class="kursus">
                         <div class="course">
-                            <img src="img/DQLab.png" alt="DQLab">
+                            <img src="img/course/DQLab.png" alt="DQLab">
                         </div>
                         <p>Mini Bootcamp: Data Science</p>
                     </div>
                     <div class="kursus">
                         <div class="course">
-                            <img class="bekalin" src="img/bekalin.png" alt="BEKALIN">
+                            <img class="bekalin" src="img/course/bekalin.png" alt="BEKALIN">
                         </div>
                         <p>Pelatihan BEKALIN: Belajar Ekonomi Kreatif Digital Indonesia</p>
-                    </div>
-                    <div class="kursus">
-                        <div class="course">
-                            <img class="camp404" src="img/camp404.png" alt="camp404">
-                        </div>
-                        <p>UI UX Design Fundamentals</p>
                     </div>
                 </div>
 
@@ -116,15 +110,15 @@
                         </div>
                         <p>A personal web I made to introduce my self. I made this project after learned about Figma.</p>
                     </div>
-                    
+
                     <div class="projects">
                         <h4>VIVIZ</h4>
                         <div class="project">
                             <a href="https://asakarso.github.io/viviz/" target="blank">
-                                <img src="img/project/viviz.png" alt="VIVIZ">
+                                <img src="img/project/viviz.png" alt="viviz">
                             </a>
                         </div>
-                        <p>A website that inform you about a south-korean girlgorup named VIVIZ. This is one of my projects I made as requirement to finish my course in Dicoding.</p>
+                        <p>A website that inform you about a south-korean girlgorup named VIVIZ. This is one of my projects I made as requirement to finish my course in Dicoding</p>
                     </div>
                 </div>
             </div>
@@ -143,9 +137,26 @@
                 </div>
     
                 <div class="contact-right">
-                    <img src="img/discuss.png" alt="Contact Me">
+                    <img src="img/etc/discuss.png" alt="Contact Me">
                 </div>
             </div>
+        </div>
+    </div>
+
+    <!-- sav, bav -->
+
+    <div class="sav">
+        <div class="container">
+            <img src="img/etc/device.svg">
+            <h1>Please open in wider device</h1>
+        </div>
+        <p>Psst developernya lagi pusing, jadi ga bisa ngedit responsive layoutnya hihi.</p>
+    </div>
+
+    <div class="bav">
+        <div class="container">
+            <img src="img/etc/device.svg">
+            <h1>Please open in smaller device</h1>
         </div>
     </div>
 
@@ -155,23 +166,5 @@
             <p>&copy; asakarso. 2020. My First Profile Web</p>
         </div>
     </footer>
-
-    <!-- sav, bav -->
-
-    <div class="sav">
-        <div class="container">
-            <img src="img/device.svg">
-            <h1>Please open in wider device</h1>
-        </div>
-        <p>Psst developernya lagi pusing, jadi ga bisa ngedit responsive layoutnya hihi.</p>
-    </div>
-
-    <div class="bav">
-        <div class="container">
-            <img src="img/device.svg">
-            <h1>Please open in smaller device</h1>
-        </div>
-        <p>Psst developernya lagi pusing, jadi ga bisa ngedit responsive layoutnya hihi.</p>
-    </div>
 </body>
 </html>
