--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                         <div class="course">
                             <img src="img/course/dicoding.png" alt="Dicoding">
                         </div>
-                        <p>Memulai Pemrograman dengan Python</p>
+                        <p>Dasar Pemrograman Web</p>
                     </div>    
                     <div class="kursus">
                         <div class="course">
